--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+﻿
 .header {
 	text-align:center;
 	font-family:"Monotype Corsiva";
@@ -51,9 +51,8 @@ li a:hover {
 }
 
 .slide {
-	background-color:lime;
 	margin:0px 0px 0px 0px;
-	background-image:url('../images/daun.jpg');
+	background-image:url('../images/bunga.gif');
 }
 
 
@@ -79,20 +78,17 @@ position:absolute;
 .alamat {
 	background-color:green;
 	text-align:left;
-	color:yellow;
+	color:white;
 	padding:10px 0px 10px 10px;
 	margin:0;
 	font-family:"Comic Sans MS";
 	font-weight:lighter;
 	
+	
 }
 
 p.small {
 	line-height:150%;
-<<<<<<< HEAD
-    color: white;
-=======
->>>>>>> refs/remotes/Shinta5416/master
 }
 
 .logo {
@@ -102,4 +98,103 @@ p.small {
 	
 }
 
+/*body {	background-color:sky blue;
+				color:#fff;
+				font-family: Arial, sans-serif;
+				font-size:11px;
+				line-height: 14px;
+				padding:10px 0px 10px 10px;
+				margin:30px 0 30px 0;	
+				}*/
+
+
+.box { 	background-color:#ff4499;
+				-moz-border-radius:3px;
+  		  -khtml-border-radius: 3px;
+				-webkit-border-radius:3px;
+				border-radius:3px;
+
+ 
+-webkit-transition: all 300ms cubic-bezier(1.000, 0.000, 0.000, 1.000); 
+   -moz-transition: all 300ms cubic-bezier(1.000, 0.000, 0.000, 1.000); 
+    -ms-transition: all 300ms cubic-bezier(1.000, 0.000, 0.000, 1.000); 
+     -o-transition: all 300ms cubic-bezier(1.000, 0.000, 0.000, 1.000); 
+        transition: all 300ms cubic-bezier(1.000, 0.000, 0.000, 1.000); /* easeInOutExpo */
+        
+  -webkit-transition-property: left, right, top;
+     -moz-transition-property: left, right, top;
+      -ms-transition-property: left, right, top;
+       -o-transition-property: left, right, top;
+          transition-property: left, right, top;
+
+
+                 
+        				}	
+			
+#container { 
+	background-image:url('../images/bunga.gif');
+	margin:0px 0px -37px 0px;
+	}
+
+.size21, .size22, .size23, .twocols { background: #ccc }
+.size31, .size32, .size33, .threecols { background: #ff9999 }
+
+a.btn {
+  margin-right: 1px;
+  line-height: 30px;
+  height: 30px;
+  cursor: pointer;
+  display: inline-block;
+  width: 75px;
+  color: red;
+}
+
+.foto {
+    padding: 0;
+    border-radius: 4%;
+    overflow: hidden;
+}
+
+
+
+
+.field{
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/field.jpg);
+    position: relative;
+    background-repeat: no-repeat;
+    padding:10%;
+    margin:0px 0px 0px 300px;
+    background-size:contain;
+}
+.gather{
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/gather.jpg);
+    position: relative;
+    background-repeat: no-repeat;
+    padding:151px 0px 0px 0px;
+    margin:0px 200px 0px 300px;
+    background-size:contain;
+}
+.modal-isi{
+    background-color: white;
+    margin: auto;
+    padding: 1%;
+    border: 1px solid #888;
+    width: 80%;
+}
+.tombolf{
+    margin:100px 50px -100px -50px
+    }
+    
+.tombolg{
+    margin:0px -50px 50px 80px;
+    }
+    
+.isi{
+    background-image: url(../images/bunga.gif);
+    margin:0px 0px 0px 0px;
+}
 
