--- a/css/style_anis.css
+++ b/css/style_anis.css
@@ -1,11 +1,11 @@
-body {	background-color:skyblue;
+﻿/*body {	background-color:sky blue;
 				color:#fff;
 				font-family: Arial, sans-serif;
 				font-size:11px;
 				line-height: 14px;
 				padding:10px 0px 10px 10px;
 				margin:30px 0 30px 0;	
-				}
+				}*/
 
 
 .box { 	background-color:#ff4499;
@@ -29,9 +29,12 @@ body {	background-color:skyblue;
 
 
                  
-        				}
+        				}	
 			
-#container { background: skyblue; margin: 20px;}
+#container { 
+	background-image:url('../images/bunga.gif');
+	margin:0px 0px -37px 0px;
+	}
 
 .size21, .size22, .size23, .twocols { background: #ccc }
 .size31, .size32, .size33, .threecols { background: #ff9999 }
